examples/type_checker/000.cstar
main() :: void {
  int a = 10;
  float b = 12.24;
  
  // should be passed
  int r = a + b + 10;

  bool k = true;

  int x = 50;
  // error
  bool z = x + k + true; 

  a = z;
  b = r;

  if(t > 10) {
    int e = 21;
    bool t = e;
  }
  
  loop(index,data in arr) {

  }

  loop(i in [0,100]) {
      
  }

  loop(x > 10) {
      
  }

  loop(true) {

  }

  ret;
}
